cmake_minimum_required(VERSION 3.17)
project(Inject)
set(CMAKE_CXX_STANDARD 20)
add_executable(Inject Main.cpp)
find_package(asio REQUIRED)
find_package(unofficial-http-parser REQUIRED)
find_package(fmt REQUIRED)
find_package(restinio REQUIRED)
target_link_libraries(Inject PRIVATE restinio::restinio)
